<resources>
    <string name="app_name">PayWise</string>
    <string name="sub_title">Smart with Money, Easy in Life.</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login Account</string>
    <string name="sub_title_login">Sign in to manage your money wisely.</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="forgot_pw_login">Forgot Password?</string>
    <string name="havent_acc_login">I dont\'t have an account
        <font color="#61D917">Register</font>
    </string>
    <string name="register_title">Create Your Account</string>
    <string name="register_subtitle">Welcome! Let’s create your PayWise account.</string>
    <string name="register_input_email">Enter Email Address</string>
    <string name="register_password">Enter Password</string>
    <string name="register_username">Enter Username</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_full_name">Full Name</string>
    <string name="have_acc_login">I already have an account
        <font color="#61D917">Login</font>
    </string>
    <string name="dashboard_logout">LOGOUT</string>
    <string name="reset_password_account">Reset your password</string>
    <string name="reset_password_sub_title">Reset your Paywise account password below.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="back_to_login">Back to
        <font color="#61D917">Login</font>
    </string>
    <string name="reset_password_email">Email address</string>
    <string name="dashboard_total_income">Total Income</string>
    <string name="dashboard_total_expense">Total Expense</string>
    <string name="trans_amount">Amount</string>
    <string name="trans_date">Transaction date</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="item_content_edit">Edit</string>
    <string name="item_content_delete">Delete</string>
    <string name="trans_sub_title">Manage your income and expenses with ease.</string>
</resources>