<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="24dp"
    tools:context=".DefaultActivity">

    <!-- Banner Image -->
    <ImageView
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/banner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/cardContent" />

    <!-- Card Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:elevation="8dp"
        app:cardCornerRadius="16dp"
        android:layout_marginVertical="40dp"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Title -->
            <TextView
                android:id="@+id/title_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:fontFamily="@font/montserrat" />

            <!-- Subtitle -->
            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_title"
                android:textSize="14sp"
                android:lineSpacingExtra="4dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat" />

            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/btn_login"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:cornerRadius="12dp"
                app:strokeColor="@color/primary"/>

            <!-- Register Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/btn_register"
                style="@style/Widget.MaterialComponents.Button"
                app:cornerRadius="12dp"
                app:backgroundTint="@color/primary"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
