<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:paddingRight="24dp"
    android:paddingLeft="24dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/trans_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Add Your Transaction"
        style="@style/title"/>

    <TextView
        android:id="@+id/trans_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/trans_sub_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trans_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="Name Transaction"
        style="@style/TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_trans_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/trans_amount"
        style="@style/TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_trans_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transaction_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/trans_date"
        style="@style/TextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_trans_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:id="@+id/rb_income"
            android:checked="true"
            android:text="Income"
            android:textColor="@color/black"/>

        <RadioButton
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:id="@+id/rb_expense"
            android:text="Expense"
            android:textColor="@color/black"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/save_transaction"
        android:layout_marginTop="24dp"
        style="@style/btn_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
